# gnotify-to-line

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  constants.py  gmail-sample.py  gmail.py  gnotifier.service  patterns.py  pyproject.toml  requirements-dev.txt  requirements.txt  secrets-sample.py  setup.py  setup.py.old  test.py  tox.ini
docs/: code_of_conduct.rst  conf.py  gmail-config.rst  gmail2notifier.rst  index.rst  installation.rst  introduction.rst  quickstart.rst
scripts/: g2line.py
src/gmail2line/: __init__.py  config_parser.py  constants.py  error_codes.py  exit_codes.py  glogger.py  gmail-sample.py.old  gmail.py  health.py  line.py  main.py  message_builder.py  patterns.py  test.py  toml_handler.py
src/gmail2line/cli/: __init__.py  health.py
src/gmail2line/config/: __init__.py  parser.py
src/gmail2line/core/: __init__.py
src/gmail2line/gmail/: __init__.py  gmail.py  label.py  mail.py  resource.py  service.py
src/gmail2line/messages/: __init__.py  builder.py  common.py  message_builder.py
src/gmail2line/notifiers/: line.py
src/gmail2line/scripts/: g2line.py
src/gmail2notification/: __init__.py  glogger.py
src/gmail2notification/cli/: __init__.py  exit_codes.py  health.py
src/gmail2notification/config/: parser.py
src/gmail2notification/core/: __init__.py  matching.py
src/gmail2notification/core/patterns/jpn/: regex.py
src/gmail2notification/gmail/: __init__.py  mail.py  resource.py
src/gmail2notification/messages/: __init__.py  builder.py  japan.py
src/gmail2notification/notifiers/: base.py  line_notifier.py  pushover_notifier.py
src/gmail2notification/scripts/: __init__.py  g2notification.py
systemd/: gnotifier.service  gnotifier.timer
tests/: test_notifiers.py
tests/core/: regex.py
tests/health/: test_health.py
tests/message_builder/: test_call_function.py
tests/toml/: config.toml  gmail_false.toml  gmail_true.toml  test_toml.py
