[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail2notification"
version = "0.2.0"
description = "This is an example app"
readme = "README.md"
keywords = ["gmail", "line", "pushover", "notifier", "notification"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Internet",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

authors = [{ name = "Adam.S", email = "bas-man@users.noreply.github.com" }]

requires-python = ">=3.8.0"
#license = {text = "GPL-3.0-or-later"}
dependencies = [
  "google-api-core==2.23.0",
  "google-api-python-client==2.153",
  "google-auth==2.36.0",
  "google-auth-httplib2==0.2.0",
  "google-auth-oauthlib==0.4.2",
  "googleapis-common-protos==1.66.0",
  "line-notify==0.1.4",
  "toml==0.10.2",
  "tomli==2.0.1",
  "python-dotenv==0.21.1",
  "six==1.16.0",
  "typing-extensions==4.12.2",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.0",
  "black>=22.0.0",
  "pylint>=2.17.0",
  "mypy>=1.0.0",
  "pytest-mock>=3.10.0",
]
[project.urls]
Repository = "https://github.com/bas-man/gnotify-to-line"
Issues = "https://github.com/bas-man/gnotify-to-line/issues"

[project.scripts]
g2notification = "gmail2notification.scripts.g2notification:command"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT necessarily have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]
namespaces = false  # Disable implicit namespaces

[tool.tox]
requires = ["tox>=4.19"]
envlist = ["py38", "py39", "py310", "py311", "py312", "py313"]
isolated_build = true

[tool.tox.env_run_base]
allowlist_externals = ["pytest"]
commands = [["pytest"]]

[tool.tox.testenv]
description = "Run test under {base_python}"
deps = [
  ".[dev]", # This tells tox to install the dev dependencies from pyproject.toml
]
allowlist_externals = ["pytest"]
commands = [["pytest"]]
